--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.31.0
-pandas==2.2.0
-numpy==1.26.3
-matplotlib==3.8.2
-seaborn==0.13.1
-openpyxl==3.1.2
+streamlit>=1.31.0
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+openpyxl>=3.1.0
